--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@
            <td><font color="yellow" size="6"><marquee behavior="alternate" bgcolor="black" scrollamount="5" onmouseover="this.stop()" onmouseout="this.start()" direction="left" loop="50"> webtech interview link</marquee></font></td>
            </tr>
            <tr>
-           <td><font color="yellow" size="6"><marquee behavior="alternate" bgcolor="black" scrollamount="5" onmouseover="this.stop()" onmouseout="this.start()" direction="right" loop="50"><a href="https://www.nhp.gov.in/"><font color="yellow"><i>www.webtech.in</i></a></font></marquee></font></td>
-           <td><font color="yellow" size="6"><marquee behavior="alternate" bgcolor="black" scrollamount="5" onmouseover="this.stop()" onmouseout="this.start()" direction="right" loop="50"><a href="http://mdm.nic.in/mdm_website/"><font color="yellow"><i>www.meet.com</i></font></a></marquee></font></td>
+           <td><font color="yellow" size="6"><marquee behavior="alternate" bgcolor="black" scrollamount="5" onmouseover="this.stop()" onmouseout="this.start()" direction="right" loop="50"><a href="https://https://docs.google.com/forms/d/e/1FAIpQLSftsx0JS5y1iMWczOc-IS1VdbhomIyaQhfEIn2tdLBGtSPh5Q/viewform?usp=sf_link"><font color="yellow"><i>www.webtech.in</i></a></font></marquee></font></td>
+           <td><font color="yellow" size="6"><marquee behavior="alternate" bgcolor="black" scrollamount="5" onmouseover="this.stop()" onmouseout="this.start()" direction="right" loop="50"><a href="http://"><font color="yellow">https://meet.google.com/dhj-phbz-yvh<i>www.meet.com</i></font></a></marquee></font></td>
            </tr>
        </table>
        
