--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="text-1">welcome, in my Company</div>
                 <div class="text-2">WEBTECH</div>
                 <div class="text-3">my sarvices <span class="typing"></span></div>
-                <a href="#">Apply for hireing</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSftsx0JS5y1iMWczOc-IS1VdbhomIyaQhfEIn2tdLBGtSPh5Q/viewform?usp=sf_link">Apply for hireing</a>
                
             </div>
         </div>
@@ -225,7 +225,7 @@
            </tr>
            <tr>
            <td><font color="yellow" size="6"><marquee behavior="alternate" bgcolor="black" scrollamount="5" onmouseover="this.stop()" onmouseout="this.start()" direction="right" loop="50"><a href="https://https://docs.google.com/forms/d/e/1FAIpQLSftsx0JS5y1iMWczOc-IS1VdbhomIyaQhfEIn2tdLBGtSPh5Q/viewform?usp=sf_link"><font color="yellow"><i>www.webtech.in</i></a></font></marquee></font></td>
-           <td><font color="yellow" size="6"><marquee behavior="alternate" bgcolor="black" scrollamount="5" onmouseover="this.stop()" onmouseout="this.start()" direction="right" loop="50"><a href="http://"><font color="yellow">https://meet.google.com/dhj-phbz-yvh<i>www.meet.com</i></font></a></marquee></font></td>
+           <td><font color="yellow" size="6"><marquee behavior="alternate" bgcolor="black" scrollamount="5" onmouseover="this.stop()" onmouseout="this.start()" direction="right" loop="50"><a href="http://"https://meet.google.com/dhj-phbz-yvh<i>www.meet.com"><font color="yellow"></i></font></a></marquee></font></td>
            </tr>
        </table>
        
