--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
            </tr>
            <tr>
            <td><font color="yellow" size="6"><marquee behavior="alternate" bgcolor="black" scrollamount="5" onmouseover="this.stop()" onmouseout="this.start()" direction="right" loop="50"><a href="https://https://docs.google.com/forms/d/e/1FAIpQLSftsx0JS5y1iMWczOc-IS1VdbhomIyaQhfEIn2tdLBGtSPh5Q/viewform?usp=sf_link"><font color="yellow"><i>www.webtech.in</i></a></font></marquee></font></td>
-           <td><font color="yellow" size="6"><marquee behavior="alternate" bgcolor="black" scrollamount="5" onmouseover="this.stop()" onmouseout="this.start()" direction="right" loop="50"><a href="http://"https://meet.google.com/dhj-phbz-yvh<i>www.meet.com"><font color="yellow"></i></font></a></marquee></font></td>
+           <td><font color="yellow" size="6"><marquee behavior="alternate" bgcolor="black" scrollamount="5" onmouseover="this.stop()" onmouseout="this.start()" direction="right" loop="50"><a href="http://meet.google.com/dhj-phbz-yvh<i>www.meet.com"><font color="yellow"><i>ww.webtechmeet.com</i></font></a></marquee></font></td>
            </tr>
        </table>
        
