--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section class="home" id="home">
         <div class="max-width">
             <div class="home-content">
-                <div class="text-1">welcome, in my Company</div>
+                <div class="text-1">Welcome, in my Company</div>
                 <div class="text-2">WEBTECH</div>
                 <div class="text-3">my sarvices <span class="typing"></span></div>
                 <a href="https://docs.google.com/forms/d/e/1FAIpQLSftsx0JS5y1iMWczOc-IS1VdbhomIyaQhfEIn2tdLBGtSPh5Q/viewform?usp=sf_link">Apply for hireing</a>
@@ -70,7 +70,7 @@
     <!-- services section start -->
     <section class="services" id="services">
         <div class="max-width">
-            <h2 class="title">My services</h2>
+            <h2 class="title">My Services</h2>
             <div class="serv-content">
                 <div class="card">
                     <div class="box">
@@ -185,21 +185,21 @@
                 <div class="card">
                     <div class="box">
                         <img src="part4.jpg" alt="">
-                        <div class="text">amit kumar</div>
-                        <p> i am  web devloper, It refers to developing and maintaining web pages, including bits and pieces of concepts like web design, web programming, web publishing, and database management. Further, it includes various types of web development tools and techniques such as text editors for manually coding the websites, Dreamweaver for developing a web page, using a blogging website to update blogs, and more.</p>
+                        <div class="text">Amit kumar</div>
+                        <p> i am  Web devloper, It refers to developing and maintaining web pages, including bits and pieces of concepts like web design, web programming, web publishing, and database management. Further, it includes various types of web development tools and techniques such as text editors for manually coding the websites, Dreamweaver for developing a web page, using a blogging website to update blogs, and more.</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-3.jpeg" alt="">
-                        <div class="text">rajani kumari</div>
+                        <div class="text">Rajni Kumari</div>
                         <p> i am  web devloper, It refers to developing and maintaining web pages, including bits and pieces of concepts like web design, web programming, web publishing, and database management. Further, it includes various types of web development tools and techniques such as text editors for manually coding the websites, Dreamweaver for developing a web page, using a blogging website to update blogs, and more..</p>
                     </div>
                 </div>
                 <div class="card">
                     <div class="box">
                         <img src="part3.jpeg" alt="">
-                        <div class="text">prince kumar</div>
+                        <div class="text">Prince Kumar</div>
                         <p> i am  web devloper, It refers to developing and maintaining web pages, including bits and pieces of concepts like web design, web programming, web publishing, and database management. Further, it includes various types of web development tools and techniques such as text editors for manually coding the websites, Dreamweaver for developing a web page, using a blogging website to update blogs, and more..</p>
                     </div>
                 </div>
@@ -207,7 +207,7 @@
                 <div class="card">
                     <div class="box">
                         <img src="images/profile-5.jpeg" alt="">
-                        <div class="text">rajni kumari</div>
+                        <div class="text">Rajni Kumari</div>
                         <p> i am  web devloper, It refers to developing and maintaining web pages, including bits and pieces of concepts like web design, web programming, web publishing, and database management. Further, it includes various types of web development tools and techniques such as text editors for manually coding the websites, Dreamweaver for developing a web page, using a blogging website to update blogs, and more.</p>
                     </div>
                 </div>
